--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -8,9 +8,8 @@ block content
                 form(@submit.prevent="submit")
                     .input-field
                         input#email.validate(type='email', name='email', v-model="email")
-                        label(for="email") Email
+                        label(data-error="wrong",for="email") Email
                     .input-field
                         input#password.validate(type='password', name='password', v-model="password")
-                        label(for="password") Password
-                    button.waves-effect.waves-light.btn.col.s4.offset-s4(type='submit')
-                        | Submit
+                        label(data-error="wrong",for="password") Password
+                        button.waves-effect.waves-light.btn.col.s4.offset-s4(type='submit') Submit
