--- a/views/index.pug
+++ b/views/index.pug
@@ -1,4 +1,21 @@
 extends layout.pug
 
 block content
-    | {{title}}
+    feed-component(inline-template)
+        .row
+            new-post-component(inline-template)
+                include feed/new-post.pug
+            | {{title}}
+            ul
+                li.card(v-for="(post,index) in posts" )
+                    .collection
+                        .row.collection-item
+                            .col.s12(v-html="post.content")
+                        .row.comments.collection-item
+                            .col.s12
+                                .trigger(@click="triggerComments(index)")
+                                    span.material-icons(v-if="showComments[index]") keyboard_arrow_up
+                                    span.material-icons(v-else) keyboard_arrow_down
+                                    | Comments
+                                .display-comments(v-if="showComments[index]") Zalupa
+                    
