--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -1,8 +1,7 @@
 extends ../layout.pug
 
 block content
-    login-component
-    script(type="text/x-template" id="login-component")
+    login-component(inline-template)
         .row
             .card.col.s4.offset-s4
                 form(@submit.prevent="submit")
