--- a/views/layout.pug
+++ b/views/layout.pug
@@ -13,7 +13,7 @@ html
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     link(rel='icon', type='image/x-icon', href='favicon.ico')
-    link(type='text/css',rel='stylesheet',href="public/styles.css")
+    link(type='text/css',rel='stylesheet',href="styles.css")
     link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.2/summernote.css")
   body.amber.lighten-4
     #body
@@ -45,4 +45,4 @@ html
     script(type="text/javascript", src="https://code.jquery.com/jquery-2.1.1.min.js")
     script(type="text/javascript", src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.2/summernote.min.js")
-    script(src="public/build.js")
+    script(src="build.js")
