--- a/views/layout.pug
+++ b/views/layout.pug
@@ -25,7 +25,7 @@ html
                         a(href='/') Home
                     span(v-if="$store.state.user")
                         li
-                            a(href='/users') Users
+                            a(href='/user') Users
                         li
                             ul.dropdown-content#user-dropdown
                                 li
