--- a/views/feed/new-post.pug
+++ b/views/feed/new-post.pug
@@ -1,4 +1,4 @@
-new-post-component(inline-template, @submitted="loadData")
+new-post-component(inline-template, @submitted="loadPosts")
     div#new-post-component
         ul.collapsible(data-collapsible="accordion")
             li.white
