--- a/views/profile.pug
+++ b/views/profile.pug
@@ -1,6 +1,3 @@
-extends layout.pug
-
-block content
-    profile-component(inline-template)
-        .row
-            include posts.pug
+div
+    include posts.pug
+    | ZALUPA
